<resources>
    <string name="app_name">Artificial Psychiatrist</string>
    <string name="name">Mental Sickness Prediction</string>
    <string name="text">Age</string>
    <string name="text1">Time Spent On Online Class(hr)</string>
    <string name="text2">Rating Of Online Class</string>
    <string name="text3">Medium Of Online Class</string>
    <string name="text4">Time Spent In Study(hr)</string>
    <string name="text5">Time Spent On Fitness(hr)</string>
    <string name="text6">Time Spent On Sleep(hr)</string>
    <string name="text7">Time Spent On Social Media(hr)</string>
    <string name="text8">Prefered Social Media</string>
    <string name="text9">Time Spent On TV(hr)</string>
    <string name="text10">Number Of Meals Per Day</string>
    <string name="text11">Change In Weight</string>
    <string name="text12">Stress Busters</string>
    <string name="text13">Time Utilized</string>
    <string name="text14">Connected With Family,Friends,Relatives</string>
    <string name="text15">What You Miss The Most</string>
    <string name="button_name">Submit</string>

<!--     spinner for mental health-->
    <string-array name="Rating_class">
        <item>Very poor</item>
        <item>Average</item>
        <item>Good</item>
        <item>Excellent</item>
        <item>Poor</item>
    </string-array>

    ><string-array name="Medium_class">
    <item>Laptop/Desktop</item>
    <item>Smartphone</item>
    <item>Smartphone or Laptop/Desktop</item>
    <item>Any Gadget</item>
    <item>Tablet</item>
</string-array>
    <string-array name="platform_media">
        <item>Instagram</item>
        <item>Whatsapp</item>
        <item>Youtube</item>
        <item>Linkedin</item>
        <item>Facebook</item>
        <item>Twitter</item>
        <item>Snapchat</item>
        <item>Reddit</item>
        <item>Telegram</item>
        <item>Talklife</item>
        <item>Quora</item>
    </string-array>

   <string-array name="weight">

       <item>Remain Constant</item>
       <item>Increased</item>
       <item>Decreased</item>
   </string-array>
   <string-array name="Stress">
     <item>Cooking</item>
     <item>Scrolling through social media</item>
     <item>Listening to music</item>
     <item>Watching web series</item>
     <item>Coding and studying for exams</item>
     <item>live stream watching</item>
     <item>Reading</item>
     <item>Online gaming</item>
     <item>Sleep</item>
   </string-array>
    <string-array name="miss">
      <item>School/college</item>
      <item>Roaming around freely</item>
      <item>Travelling</item>
      <item>Friends,relatives</item>
      <item>Eating outside</item>
      <item>Colleagues</item>
    </string-array>
    <string-array name="Time_utilized">
       <item>Yes</item>
       <item>No</item>
    </string-array>
    <string-array name="find_yourself">
       <item>Yes</item>
       <item>No</item>
    </string-array>

<!--    Treatment Required-->

    <string name="name1">Recovery Suggestion Prediction</string>

    <string name="tex1">Part Time Employment</string>
    <!--    <string name="tex1">MetalHealthStatus</string>-->
    <string name="tex2">Education</string>
    <string name="tex3">Device Apart From Phone</string>
    <string name="tex4">Treatment For Any Disease</string>
    <string name="tex5">Physical Disability</string>
    <string name="tex6">Regular Access To Internet</string>
    <string name="tex7">Live With Family</string>
    <string name="tex8">Gap In Study</string>
    <string name="tex9">Income(USD)</string>
    <string name="tex10">Read Besides Curriculum</string>
    <string name="tex11">Long Term Concentration</string>
    <string name="tex12">Anxiety</string>
    <string name="tex13">Depression</string>
    <string name="tex14">Obsessive Thinking</string>
    <string name="tex15">Mood Swings</string>
    <string name="tex16">Panic Attacks</string>
    <string name="tex17">Compulsive Behavior</string>
    <string name="tex18">Tiredness</string>
    <string name="tex19">Age</string>
    <string name="tex20">Gender</string>
<!--    <string name="tex21">MetalHealthStatus</string>-->
    <string name="button1">Submit</string>


<!--    spinner for treatment-->
    <string-array name="EducationStatus">

        <item>highschool ongoing</item>
        <item>High School or GED</item>
        <item>Phd ongoing</item>
        <item>Completed Phd</item>
        <item>Undergraduate</item>
        <item>graduated</item>
        <item>Masters ongoing</item>
        <item>Completed Masters</item>
    </string-array>
    <string-array name="Age">
        <item>30-44</item>
        <item>18-29</item>
        <item>45-60</item>
        <item>>60</item>
    </string-array>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="common">
        <item>Yes</item>
        <item>No</item>
    </string-array>
</resources>